--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -31,7 +31,7 @@
             </ion-label>
             <ion-input [(ngModel)]="state" name="state" type="text"></ion-input>
           </ion-item>
-          <button ion-button type="submit">Save Changes</button>
+          <button ion-button type="submit" block>Save Changes</button>
         </form>
       </ion-list>
     </ion-col>
